--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -112,6 +112,17 @@
 
     </style>
 
+
+    <style name="AlertDialogCustom" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Used for the buttons -->
+        <item name="colorAccent">@color/colorAccent</item>
+        <!-- Used for the title and text -->
+        <item name="android:textColorPrimary">#FFFFFF</item>
+        <!-- Used for the background -->
+        <item name="android:background">@drawable/corner_raduis</item>
+    </style>
+
+
     <style name="TextStyle">
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">@color/black</item>
